--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,7 +12,7 @@ source:
 build:
   noarch: python
   script: {{ PYTHON }} -m pip install . -vv
-  number: 0
+  number: 1
 
 requirements:
   host:
@@ -20,16 +20,12 @@ requirements:
     - pip
   run:
     - python >=3.6
-    - inflect ==4.1.0
+    - inflect >=4.1.0
     - nltk >=3.3
 
 test:
   imports:
     - word_forms
-  commands:
-    - pip check
-  requires:
-    - pip
 
 about:
   home: https://github.com/gutfeeling/word_forms
